# Makefile.am file for knocker
# Edited by Gabriele Giorgetti <g.gabriele79@genie.it>

# This file is processed by automake


## Any directories that are built and installed should go here.
SUBDIRS = knuckles src doc

## Any directories to be a part of the distribution should be listed
## here, as well as have a Makefile generated at the end of configure.in
DIST_SUBDIRS = $(SUBDIRS)


# All the rest of the distributed files
EXTRA_DIST = \
	AUTHORS 	\
	BUGS            \
	COPYING         \
        INSTALL         \
        README		\
	README.Win32	\
	TO-DO    	\
	autogen.sh	\
	indent.sh	\
	ChangeLog	\
	knocker.ico     \
	DevCPP4_Project.zip
