# Makefile.am file for knocker

# This file is processed by automake


## Any directories that are built and installed should go here.
SUBDIRS = src doc

## Any directories to be a part of the distribution should be listed
## here, as well as have a Makefile generated at the end of configure.in
DIST_SUBDIRS = $(SUBDIRS)


# All the rest of the distributed files
EXTRA_DIST = \
	AUTHORS 	\
	BUGS            \
	COPYING         \
    INSTALL         \
    README		\
	README.Win32	\
	TO-DO    	\
	autogen.sh	\
	indent.sh	\
	ChangeLog	\
	knocker.ico     \
	knocker-legacy.code-workspace \
	DevCPP4_Project.zip
