# Makefile.am file for knocker
# Edited by Gabriele Giorgetti <g.gabriele79@genie.it>

# This file is processed by automake

bin_PROGRAMS    = knocker

INCLUDE= -I../knuckles/src/
LDADD= ../knuckles/src/libknuckles.a

knocker_SOURCES = 			\
		knocker_main.c		\
		knocker_core.c		\
		knocker_core.h		\
		knocker_args.c		\
		knocker_args.h		\
		knocker_user.c		\
		knocker_user.h		\
		knocker_conf.c		\
		knocker_conf.h		\
		knocker_output.c	\
		knocker_output.h	\
		knocker_log.c		\
		knocker_log.h		\
		knocker_term.c		\
		knocker_term.h          \
		knocker_time.c		\
		knocker_time.h		\
		knocker_services.c	\
		knocker_services.h	\
		knocker_led.c		\
		knocker_led.h







