# Makefile.am file for knocker
# Edited by Gabriele Giorgetti <g.giorgetti@gmail.com>

# This file is processed by automake

bin_PROGRAMS    = knocker

knocker_SOURCES = 			\
		knocker_main.c		\
		knocker_core.c		\
		knocker_core.h		\
		knocker_args.c		\
		knocker_args.h		\
		knocker_user.c		\
		knocker_user.h		\
		knocker_conf.c		\
		knocker_conf.h		\
		knocker_output.c	\
		knocker_output.h	\
		knocker_log.c		\
		knocker_log.h		\
		knocker_term.c		\
		knocker_term.h          \
		knocker_time.c		\
		knocker_time.h		\
		knocker_services.c	\
		knocker_services.h	







